--- a/src/styles/scss/_gjs_selectors.scss
+++ b/src/styles/scss/_gjs_selectors.scss
@@ -75,7 +75,7 @@
 }
 
 .#{$clm-prefix}tags {
-  font-size: $fontSizeS;
+  font-size: var(--grapes-font-size);
   padding: 10px 5px;
 
   ##{$clm-prefix}sel {
@@ -106,8 +106,8 @@
   ##{$clm-prefix}new {
     @extend  .#{$app-prefix}invis-invis;
 
-    color: $fontColor;
-    padding: $paddElClm;
+    color: var(--grapes-font-color);
+    padding: var(--grapes-padding-elem-classmanager);
     display: none;
   }
 
