--- a/src/styles/scss/_gjs_variables.scss
+++ b/src/styles/scss/_gjs_variables.scss
@@ -68,4 +68,4 @@ $mainFont:          Helvetica, sans-serif !default;
 $fontSize:          0.75rem !default;
 
 /* Tools */
-$placeholderColor:   var(--grapes-color-green) !default;
+$placeholderColor:   var(--gjs-color-green) !default;
