--- a/src/styles/scss/_gjs_traits.scss
+++ b/src/styles/scss/_gjs_traits.scss
@@ -1,6 +1,6 @@
 .#{$app-prefix} {
   &traits-label {
-    border-bottom: 1px solid var(--grapes-main-dark-color);
+    border-bottom: 1px solid var(--gjs-main-dark-color);
     font-weight: lighter;
     margin-bottom: 5px;
     padding: 10px;
@@ -37,7 +37,7 @@
   text-align: left;
 
   &s {
-    font-size: var(--grapes-font-size);
+    font-size: var(--gjs-font-size);
   }
 
   .#{$app-prefix}label {
