Fixed typo on variable

--- a/src/styles/scss/_gjs_layers.scss
+++ b/src/styles/scss/_gjs_layers.scss
@@ -14,7 +14,7 @@ $layerIconSize: 15px !default;
     text-align: left;
     position: relative;
     background-color: rgba(0, 0, 0, 0.1);
-    font-size: $fontSizeS;
+    font-size: $fontSize;
     display: grid;
 
     &-item {
