--- a/src/styles/scss/_gjs_variables.scss
+++ b/src/styles/scss/_gjs_variables.scss
@@ -33,6 +33,7 @@ $mainDkColor:       rgba(0, 0, 0, 0.2) !default;/* darken($mainColor, 4%) - #383
 $mainDklColor:      rgba(0, 0, 0, 0.1) !default;
 $mainLhColor:       rgba(255, 255, 255, 0.1) !default; /* #515151 */
 $mainLhlColor:      rgba(255, 255, 255, 0.7) !default;
+$softLhColor:       rgba(255, 255, 255, 0.015) !default;
 $colorBlue:         #3b97e3 !default;
 $colorRed:          #dd3636 !default;
 $colorYell:         #ffca6f !default;
