--- a/src/styles/scss/_gjs_variables.scss
+++ b/src/styles/scss/_gjs_variables.scss
@@ -12,6 +12,7 @@ $sm-prefix:         $app-prefix + 'sm-' !default;
 $cv-prefix:         $app-prefix + 'cv-' !default;
 $clm-prefix:        $app-prefix + 'clm-' !default;
 $trt-prefix:        $app-prefix + 'trt-' !default;
+$pg-prefix:         $app-prefix + 'pg-' !default;
 $cui-cls:           $app-prefix + 'cui' !default;
 
 /*
