WIP traits refactor

--- a/src/styles/scss/_gjs_traits.scss
+++ b/src/styles/scss/_gjs_traits.scss
@@ -21,6 +21,13 @@
       flex-grow: 1;
     }
   }
+
+  &caret {
+    width: 17px;
+    height: 17px;
+    min-width: 17px;
+    transform: rotate(-90deg);
+  }
 }
 
 .#{$trt-prefix}header {
