An abstract category class was added to the trait_manager, like the block_manager,and refactoring the block_manager.

--- a/src/styles/scss/_gjs_traits.scss
+++ b/src/styles/scss/_gjs_traits.scss
@@ -1,3 +1,31 @@
+.#{$app-prefix}traits-c {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.#{$app-prefix}trait-categories {
+  display: flex;
+  flex-direction: column;
+}
+
+.#{$app-prefix}trait-category {
+  width: 100%;
+
+  &.#{$app-prefix}open {
+    @extend .#{$app-prefix}category-open;
+  }
+
+  .#{$app-prefix}title {
+    @extend .#{$app-prefix}category-title;
+  }
+
+  .#{$app-prefix}caret-icon {
+    margin-right: 5px;
+  }
+}
+
+
 .#{$app-prefix} {
   &traits-label {
     border-bottom: 1px solid var(--gjs-main-dark-color);
