--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -3,6 +3,13 @@
   display: block;
 }
 
+.img-ctr-rad {
+  margin: 0 auto;
+  display: block;
+  border-radius: 5px;
+  width: 100%;
+}
+
 .navbar {
   background-color: rgb(111, 41, 67);
   background-image: linear-gradient(120deg, rgb(217, 131, 166), rgb(77, 17, 79));
