Add i18n section to Traits

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,11 +1,9 @@
-.img-ctr {
+.img-ctr, .img-ctr-rad {
   margin: 0 auto;
   display: block;
 }
 
 .img-ctr-rad {
-  margin: 0 auto;
-  display: block;
   border-radius: 5px;
   width: 100%;
 }
