--- a/src/styles/scss/_gjs_traits.scss
+++ b/src/styles/scss/_gjs_traits.scss
@@ -22,6 +22,12 @@
     }
   }
 
+  &item-title {
+    @extend .#{$app-prefix}category-title;
+    display: flex;
+    align-items: center;
+  }
+
   &caret {
     width: 17px;
     height: 17px;
