--- a/src/styles/scss/_gjs_canvas.scss
+++ b/src/styles/scss/_gjs_canvas.scss
@@ -271,6 +271,10 @@ $guide_pad: 5px !default;
     outline: none;
     z-index: 1;
   }
+  /* Always place the tools above the highlighter */
+  ##{$app-prefix}tools {
+    z-index: 2;
+  }
 
   /* This simulate body behaviour */
   // > div:first-child {
